[gd_scene load_steps=8 format=3 uid="uid://b5e4xhasns4tl"]

[ext_resource type="Script" path="res://Scripts/die_screen.gd" id="1_mspx5"]
[ext_resource type="FontFile" uid="uid://chqhosqiiwk5" path="res://Assets/Fonts/Minecraft.ttf" id="2_kktje"]
[ext_resource type="AudioStream" uid="uid://c5q5irligprqo" path="res://Assets/Sounds/start_game.mp3" id="4_3lgxu"]
[ext_resource type="Texture2D" uid="uid://cameur3fomwcj" path="res://Assets/Sprites/endsceneEnemy.png" id="5_6qmnc"]

[sub_resource type="Animation" id="Animation_mwy2l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RestartLabel:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_pd0p0"]
resource_name = "die_message_fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:theme_override_colors/font_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(1, 0, 0, 0.27451), Color(1, 0, 0, 0.564706), Color(1, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RestartLabel:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WaveLabel:theme_override_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(-0.533333, 0.466667, 1.46667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5cu1w"]
_data = {
"RESET": SubResource("Animation_mwy2l"),
"die_message_fade_in": SubResource("Animation_pd0p0")
}

[node name="DieScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mspx5")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 0)
theme_override_fonts/font = ExtResource("2_kktje")
theme_override_font_sizes/font_size = 184
text = "You Died!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5cu1w")
}

[node name="RestartLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 571.0
offset_top = 527.0
offset_right = 611.0
offset_bottom = 550.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("2_kktje")
theme_override_font_sizes/font_size = 40
text = "Press [Space] To Restart"
metadata/_edit_use_anchors_ = true

[node name="WaveLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.116319
anchor_top = -0.194444
anchor_right = 0.0902778
anchor_bottom = -0.137346
offset_left = 571.0
offset_top = 527.0
offset_right = 611.0
offset_bottom = 550.0
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("2_kktje")
theme_override_font_sizes/font_size = 60
text = "On Wave x"
metadata/_edit_use_anchors_ = true

[node name="StartSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3lgxu")
volume_db = 10.0

[node name="Enemies" type="StaticBody2D" parent="."]

[node name="enemy1" type="Sprite2D" parent="Enemies"]
position = Vector2(840, 213)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_6qmnc")

[node name="enemy2" type="Sprite2D" parent="Enemies"]
visible = false
position = Vector2(397, 120)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_6qmnc")

[node name="enemy3" type="Sprite2D" parent="Enemies"]
visible = false
position = Vector2(262, 255)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_6qmnc")

[node name="enemy4" type="Sprite2D" parent="Enemies"]
visible = false
position = Vector2(673, 351)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_6qmnc")

[node name="enemy5" type="Sprite2D" parent="Enemies"]
visible = false
position = Vector2(548, 233)
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_6qmnc")

[node name="enemy6" type="Sprite2D" parent="Enemies"]
visible = false
position = Vector2(781, 399)
texture = ExtResource("5_6qmnc")

[node name="enemy7" type="Sprite2D" parent="Enemies"]
visible = false
position = Vector2(355, 334)
scale = Vector2(2, 2)
texture = ExtResource("5_6qmnc")

[node name="enemy8" type="Sprite2D" parent="Enemies"]
visible = false
position = Vector2(608, 258)
scale = Vector2(3, 3)
texture = ExtResource("5_6qmnc")

[node name="enemy9" type="Sprite2D" parent="Enemies"]
visible = false
position = Vector2(582, 176)
scale = Vector2(4, 4)
texture = ExtResource("5_6qmnc")
